--- a/TM.RestHour/Views/Equipments/Index.cshtml
+++ b/TM.RestHour/Views/Equipments/Index.cshtml
@@ -12,6 +12,11 @@
 <link href="dist/dual-listbox.css" rel="stylesheet">
 <link href="~/link/css/rank.css" rel="stylesheet" />
 
+<link href="~/Content/themes/base/datepicker.css" rel="stylesheet" />
+
+<link href="~/Content/plugin/datepicker/datepicker.css" rel="stylesheet" />
+<link href="~/Content/plugin/datepicker/css/pickmeup.css" rel="stylesheet" />
+
 <script src="~/Scripts/notify.min.js"></script>
 <script src="~/Scripts/toastr.min.js"></script>
 <link href="~/Content/toastr.min.css" rel="stylesheet" />
@@ -19,7 +24,8 @@
 
 @Html.Hidden("SaveEquipments", @Url.Action("SaveEquipments", "Equipments"))
 @Html.Hidden("loaddata", @Url.Action("LoadData", "Equipments"))
-
+@Html.Hidden("GetMedicalEquipmentByID", @Url.Action("GetMedicalEquipmentByID", "Equipments"))
+@Html.Hidden("DeleteEquipments", @Url.Action("DeleteEquipments", "Equipments"))
 <style>
     .bac {
         border-radius: 0;
@@ -47,12 +53,12 @@
 <body style="background-image: url(../background/equipment.jpg);
     background-size: cover;">
     <div class="row">
-        <div class="col-md-5">
-            <h2 class="ta" style="font-size: 41px;">Medical Equipment</h2>
+        <div class="col-md-4">
+            <h2 class="ta" style="font-size: 29px;">Medical Equipment</h2>
         </div>
-        <div class="col-md-7">
+        <div class="col-md-8">
             <div class="row" style="margin-left: -150px;">
-                <div class="col-md-7 bac1" style="height: 440px;">
+                <div class="col-md-8 bac1" style="height: 440px;">
                     <div class="card">
                         <div style="margin:0 auto" class="tablecontainer">
                             <button type="button" class="button1" data-toggle="modal" data-target="#myModal" onclick="clearTextBox();">Add Equipment</button><br /><br />
@@ -65,6 +71,8 @@
                                         <th>Comment</th>
                                         <th>Expiry Date</th>
                                         <th>Location</th>
+                                        <th>Edit</th>
+                                        <th>Delete</th>
                                     </tr>
                                 </thead>
                             </table>
@@ -84,94 +92,117 @@
                                         <input type="hidden" id="hdnrole" />
                                         @*@if (Session["SuperAdmin"].ToString() == "True")|| (Session["SuperAdmin"].ToString() == "True")*@
                                         @if (Convert.ToBoolean(Session["SuperAdmin"].ToString()) || Convert.ToBoolean(Session["Admin"].ToString()))
-                        {
-                            <div>
-                                <form>
-                                    <div class="form-group">
-                                        <input type="hidden" id="EquipmentsID" />
-                                    </div>
+                                        {
+                                            <div>
+                                                <form>
+                                                    <div class="form-group">
+                                                        <input type="hidden" id="EquipmentsID" />
+                                                    </div>
 
-                                    <div class="col-md-12">
-                                        <div class="card">
+                                                    <div class="col-md-12">
+                                                        <div class="card">
 
-                                            <div class="form-group">
-                                                <label for="EquipmentsName">Equipments Name</label>
-                                                <input type="text" class="form-control" id="EquipmentsName" placeholder="Equipments Name" />
+                                                            <div class="form-group">
+                                                                <label for="EquipmentsName">Equipments Name</label>
+                                                                <input type="text" class="form-control" id="EquipmentsName" placeholder="Equipments Name" />
+                                                            </div>
+                                                            <div class="form-group">
+                                                                <label for=" Quantity">Quantity</label>
+                                                                <input type="number" class="form-control" id="Quantity" placeholder="Quantity" />
+                                                            </div>
+
+                                                            <div class="form-group">
+                                                                <label for="Comment">Comment</label>
+                                                                <textarea class="form-control" id="Comment" cols="7" rows="2"></textarea>
+                                                            </div>
+
+                                                            <div class="form-group">
+                                                                <label for="Expiry Date">Expiry Date</label>
+                                                                <input type="text" class="form-control" id="ExpiryDate" placeholder="Expiry Date" />
+                                                            </div>
+
+                                                            <div class="form-group">
+                                                                <label for=" Location">Location</label>
+                                                                <input type="text" class="form-control" id="Location" placeholder="Location" />
+                                                            </div>
+
+                                                            <button type="button" class="button1" id="btnAdd" onclick="return SaveEquipments();" style="width:138px;">Add</button>
+                                                            <button type="button" class="buttonpop" id="btnUpdate" style="display:none; width:86px;" onclick="SaveEquipments();">Update</button>
+                                                            @*<button type="button" class="btn btn-default" data-dismiss="modal" style="width:86px;">Close</button>*@
+                                                        </div>
+                                                    </div>
+                                                </form>
                                             </div>
-                                            <div class="form-group">
-                                                <label for=" Quantity">Quantity</label>
-                                                <input type="number" class="form-control" id="Quantity" placeholder="Quantity" />
+                                        }
+                                        else
+                                        {
+                                            <div>
+                                                <form>
+                                                    <div class="form-group">
+                                                        <input type="hidden" id="EquipmentsID" />
+                                                    </div>
+
+                                                    <div class="col-md-12">
+                                                        <div class="card">
+
+                                                            <div class="form-group">
+                                                                <label for="EquipmentsName">Equipments Name</label>
+                                                                <input type="text" class="form-control" id="EquipmentsrName" placeholder="Equipments Name" />
+                                                            </div>
+                                                            <div class="form-group">
+                                                                <label for=" Quantity">Quantity</label>
+                                                                <input type="text" class="form-control" id="Quantity" placeholder="Quantity" />
+                                                            </div>
+
+                                                            <div class="form-group">
+                                                                <label for="Comment">Comment</label>
+                                                                <textarea class="form-control" id="Comment" cols="7" rows="2"></textarea>
+                                                            </div>
+
+                                                            <div class="form-group">
+                                                                <label for="Expiry Date">Expiry Date</label>
+                                                                <input type="text" class="form-control" id="ExpiryDate" placeholder="Expiry Date" />
+                                                            </div>
+
+                                                            <div class="form-group">
+                                                                <label for=" Location">Location</label>
+                                                                <input type="text" class="form-control" id="Location" placeholder="Location" />
+                                                            </div>
+
+                                                            @*<button type="button" class="button1" id="btnAdd" onclick="return AddEquipments();" style="width:138px;">Add</button>*@
+                                                            <button type="button" class="buttonpop" id="btnAdd" onclick="return SaveEquipments();" style="width:138px;">Add</button>
+                                                            <button type="button" class="buttonpop" id="btnUpdate" style="display:none; width:86px;" onclick="SaveEquipments();">Update</button>
+                                                            @*<button type="button" class="btn btn-default" data-dismiss="modal" style="width:86px;">Close</button>*@
+                                                        </div>
+                                                    </div>
+                                                </form>
                                             </div>
-
-                                            <div class="form-group">
-                                                <label for="Comment">Comment</label>
-                                                <textarea class="form-control" id="Comment" cols="7" rows="2"></textarea>
-                                            </div>
-
-                                            <button type="button" class="button1" id="btnAdd" onclick="return SaveEquipments();" style="width:138px;">Add</button>
-
-                                        </div>
-                                    </div>
-                                </form>
+                                        }
+                                    </fieldset>
+                                </div>
                             </div>
-        }
-        else
-        {
-                <div>
-                    <form>
-                        <div class="form-group">
-                            <input type="hidden" id="EquipmentsID" />
-                        </div>
 
-                        <div class="col-md-12">
-                            <div class="card">
-
-                                <div class="form-group">
-                                    <label for="EquipmentsName">Equipments Name</label>
-                                    <input type="text" class="form-control" id="EquipmentsrName" placeholder="Equipments Name" />
-                                </div>
-                                <div class="form-group">
-                                    <label for=" Quantity">Quantity</label>
-                                    <input type="text" class="form-control" id="Quantity" placeholder="Quantity" />
-                                </div>
-
-                                <div class="form-group">
-                                    <label for="Comment">Comment</label>
-                                    <textarea class="form-control" id="Comment" cols="7" rows="2"></textarea>
-                                </div>
-
-                                @*<button type="button" class="button1" id="btnAdd" onclick="return AddEquipments();" style="width:138px;">Add</button>*@
-
-                            </div>
-                        </div>
-                    </form>
-                </div>
-}
-                                        </fieldset>
-                                </div>
-                                </div>
-
-                            </div>
                         </div>
                     </div>
-                            <div class="col-md-4 bac">
-                                <div class="">
+                </div>
+                <div class="col-md-3 bac">
+                    <div class="">
 
-                                    <div>
-                                        @using (Html.BeginForm("Index", "Equipments", FormMethod.Post, new { enctype = "multipart/form-data" }))
-                        {
-                            <span style="font-size:20px;">Select File:</span>
-                            <br />
-                            <input type="file" name="postedFile" />
-                            @*<hr />*@
-                            <br />
-                            <input type="submit" value="Upload" class="button1" />
-                            <br /><br />
-                            <span style="color:green">@ViewBag.Message</span>
-        }
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
+                        <div>
+                            @using (Html.BeginForm("Index", "Equipments", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                            {
+                                <span style="font-size:20px;">Select File:</span>
+                                <br />
+                                <input type="file" name="postedFile" />
+                                @*<hr />*@
+                                <br />
+                                <input type="submit" value="Upload" class="button1" />
+                                <br /><br />
+                                <span style="color:green">@ViewBag.Message</span>
+                            }
+                        </div>
+                    </div>
+                    <div class="col-md-4">
                         <div class="box1">
                             @*<img src="~/background/excel.png" class="img-responsive" style="height:100%; width:100%;" />*@
                         </div>
@@ -182,20 +213,20 @@
                         </div>
 
                     </div>
-                            </div>
-                        </div>
-                    </div>
-
-
-                    @*<div class="col-md-7 bac">
-            <div><input type="file" name="UploadFile" id="txtUploadFile" class="makethispretty" /></div>
-        </div>*@
-
-
-
-
-
                 </div>
+            </div>
+        </div>
+
+
+        @*<div class="col-md-7 bac">
+                <div><input type="file" name="UploadFile" id="txtUploadFile" class="makethispretty" /></div>
+            </div>*@
+
+
+
+
+
+    </div>
 </body>
 
 
@@ -220,6 +251,13 @@
 
 
 
+        $("#ExpiryDate").datepicker({
+
+            changeMonth: true,
+            changeYear: true,
+            dateFormat: 'd-M-yy',
+
+        });
 
         $('#txtUploadFile').on('change', function (e) {
             var files = e.target.files;
