--- a/TM.RestHour/Views/Shared/_Layout.cshtml
+++ b/TM.RestHour/Views/Shared/_Layout.cshtml
@@ -89,6 +89,7 @@
                                         Crew Health<i class="fa fa-angle-right" style="margin-left:20px;"></i>
                                     </a>
                                     <ul class="dropdown-menu" role="menu" style="left: 252px;top: -3px;">
+                                        <li><a href="@Url.Action("UploadJoiningMedical", "CrewHealth")" style="border:none;">Upload Joining Medical</a></li>
                                         <li><a href="@Url.Action("JoiningMedicalReport", "CrewHealth")" style="border:none;">Joining Medical Report</a></li>
                                         <li><a href="@Url.Action("MonthlyMedicalAdvisory", "CrewHealth")" style="border:none;">Monthly Medical Data</a></li>
                                         <li><a href="@Url.Action("MedicalHistory", "CrewHealth")" style="border:none;">Medical History</a></li>
@@ -249,6 +250,7 @@
                                         Crew Health<i class="fa fa-angle-right" style="margin-left:20px;"></i>
                                     </a>
                                     <ul class="dropdown-menu" role="menu" style="left: 252px;top: -3px;">
+                                        <li><a href="@Url.Action("UploadJoiningMedical", "CrewHealth")" style="border:none;">Upload Joining Medical</a></li>
                                         <li><a href="@Url.Action("JoiningMedicalReport", "CrewHealth")" style="border:none;">Joining Medical Report</a></li>
                                         <li><a href="@Url.Action("MonthlyMedicalAdvisory", "CrewHealth")" style="border:none;">Monthly Medical Data</a></li>
                                         <li><a href="@Url.Action("MedicalHistory", "CrewHealth")" style="border:none;">Medical History</a></li>
@@ -381,6 +383,7 @@
                                         Crew Health<i class="fa fa-angle-right" style="margin-left:20px;"></i>
                                     </a>
                                     <ul class="dropdown-menu" role="menu" style="left: 252px;top: -3px;">
+                                       
                                         <li><a href="@Url.Action("JoiningMedicalReport", "CrewHealth")" style="border:none;">Joining Medical Report</a></li>
                                         <li><a href="@Url.Action("MonthlyMedicalAdvisory", "CrewHealth")" style="border:none;">Monthly Medical Data</a></li>
                                         <li><a href="@Url.Action("MedicalHistory", "CrewHealth")" style="border:none;">Medical History</a></li>
