pass checkbox values in CIRM

--- a/TM.RestHour/Views/CrewHealth/MedicalTreatment.cshtml
+++ b/TM.RestHour/Views/CrewHealth/MedicalTreatment.cshtml
@@ -119,10 +119,10 @@
                         }
                     </div>*@
                 <div>
-                    <input type="checkbox" name="uploaddoc" value="Equipment"> Upload Medical Equipemts </br>
-                    <input type="checkbox" name="uploaddoc" value="Medicine"> Upload Medical Inventory </br>
-                    <input type="checkbox" name="uploaddoc" value="JoiningReport"> Upload Joining Report </br>
-                    <input type="checkbox" name="uploaddoc" value="History"> Upload Medical History </br>
+                    <input type="checkbox" name="uploaddoc" id="uploaddoc1" value="1"> Upload Medical Equipemts </br>
+                    <input type="checkbox" name="uploaddoc" id="uploaddoc2" value="1"> Upload Medical Inventory </br>
+                    <input type="checkbox" name="uploaddoc" id="uploaddoc3" value="1"> Upload Joining Report </br>
+                    <input type="checkbox" name="uploaddoc" id="uploaddoc4" value="1"> Upload Medical History </br>
                 </div>
                 </div>
                 <div class="col-md-4">
