--- a/TM.RestHour/Views/Shared/_Layout.cshtml
+++ b/TM.RestHour/Views/Shared/_Layout.cshtml
@@ -94,6 +94,7 @@
                                         <li><a href="@Url.Action("MonthlyMedicalAdvisory", "CrewHealth")" style="border:none;">Monthly Medical Data</a></li>
                                         <li><a href="@Url.Action("MedicalHistory", "CrewHealth")" style="border:none;">Medical History</a></li>
                                         <li><a href="@Url.Action("MedicalTreatment", "CrewHealth")" style="border:none;">CIRM</a></li>
+                                        <li><a href="@Url.Action("MailCIRM", "CrewHealth")" style="border:none;">Mail CIRM</a></li>
                                     </ul>
                                 </li>
 
