--- a/TM.RestHour/Views/Equipments/Index2.cshtml
+++ b/TM.RestHour/Views/Equipments/Index2.cshtml
@@ -27,6 +27,8 @@
 @Html.Hidden("GetMedicineByID", @Url.Action("GetMedicineByID", "Equipments"))
 @Html.Hidden("DeleteMedicine", @Url.Action("DeleteMedicine", "Equipments"))
 
+
+
 <style>
     .bac {
         border-radius: 0;
@@ -63,6 +65,7 @@
                         <div class="">
                             <div style="margin:0 auto" class="tablecontainer">
                                 <button type="button" class="button1" data-toggle="modal" data-target="#myModal" onclick="clearTextBox2();">Add Medicine</button><br /><br />
+                               
                                 <input type="hidden" id="hdnrole" />
                                 <table id="Medicinetable" class="display" cellspacing="0" width="100%">
                                     <thead>
@@ -178,6 +181,9 @@
 
 
 
+                  
+
+
 
                     @*<div class="col-md-7 bac">
                             <div><input type="file" name="UploadFile" id="txtUploadFile" class="makethispretty" /></div>
@@ -233,6 +239,9 @@
     @Scripts.Render("~/bundles/jqueryui")
     @Styles.Render("~/Content/themes/base/css")
 
+
+    <script src="~/Scripts/pdfmake.min.js"></script>
+    <script src="~/Scripts/vfs_fonts.js"></script>
     <script src="~/Scripts/toastr.min.js"></script>
     <link href="~/Content/toastr.min.css" rel="stylesheet" />
 
@@ -242,6 +251,7 @@
         $(document).ready(function () {
 
             SetUpGrid2();
+            SetUpPrintGridReport();
 
         });
 
@@ -285,6 +295,13 @@
                     alert("This browser doesn't support HTML5 file uploads!");
                 }
             }
+        });
+
+
+
+        $("#btnPrint").click(function () {
+            //PrintTest('');
+            Popup2('');
         });
 
     </script>
