--- a/TM.RestHour/Views/Login/Login.cshtml
+++ b/TM.RestHour/Views/Login/Login.cshtml
@@ -182,7 +182,7 @@
 									</div>*@
 
 
-								<input type="submit" class="btn btn-success" id="btnAdd" value="Login" />
+								<input type="submit" class="btn btn-success" id="Login" value="Login" />
 								@*<a href="forgot.html" class="display-block text-center m-t-md text-sm">Forgot Password?</a>
 									<p class="text-center m-t-xs text-sm">Do not have an account?</p>
 									<a href="register.html" class="btn btn-default btn-block m-t-md">Create an account</a>*@
