--- a/TM.RestHour/Views/CrewHealth/MonthlyMedicalAdvisory.cshtml
+++ b/TM.RestHour/Views/CrewHealth/MonthlyMedicalAdvisory.cshtml
@@ -110,7 +110,7 @@
 									<div class="col-md-4">
 										<div class="form-group">
 											<label for="PulseRate">Pulse Rate(bpm)</label>
-											<input type="text" class="form-control" id="PulseRatebpm" placeholder="Pulse Rate(bpm)" />
+											<input type="number" class="form-control" id="PulseRatebpm" placeholder="Pulse Rate(bpm)" />
 
 										</div>
 									</div>
@@ -122,14 +122,14 @@
 									<div class="col-md-4">
 										<div class="form-group">
 											<label for="Weight">Weight(Kg)</label>
-											<input type="text" class="form-control" id="Weight" placeholder="Weight" />
+											<input type="number" class="form-control" id="Weight" placeholder="Weight" />
 										</div>
 									</div>
 
 									<div class="col-md-4">
 										<div class="form-group">
 											<label for="Height ">Height(cm)</label>
-											<input type="text" class="form-control" id="Height" placeholder="Height" />
+											<input type="number" class="form-control" id="Height" placeholder="Height" />
 										</div>
 									</div>
 
@@ -137,7 +137,7 @@
 
 										<div class="form-group">
 											<label for="Age">Age</label>
-											<input type="text" class="form-control" id="Age" placeholder="Age" />
+											<input type="number" class="form-control" id="Age" placeholder="Age" />
 										</div>
 									</div>
 
@@ -146,7 +146,14 @@
 								<div class="row">
 									<div class="col-md-4">
 										<div class="form-group">
-											<label for="BMI">BMI</label>
+
+
+												<div class="form-group">
+													<button type="button" class="button1" id="btnSubmit" style="margin-top:0px;" onclick="return CalculateBMI();">Calculate BMI</button>
+												</div>
+							
+
+
 											<input type="text" class="form-control" id="BMI" placeholder="BMI" disabled />
 											@*<div class="form-group"></div>
 												<button type="button" class="button1" id="btnCalculateBMI" onclick="return CalculateBMI();">Calculate BMI</button>*@
@@ -168,7 +175,7 @@
 
 								</div>
 
-								<div class="row">
+								<div class="row" id="upload01">
 									<div class="col-md-5">
 										<div class="">
 											<div>
@@ -178,17 +185,11 @@
 													<br /><br />
 													<input type="file" name="postedFile" />
 													<br />
-													<input type="submit" value="Upload Existing Prescriptions" class="button1" style="width:182px;" />
+													@*<input type="submit" value="Upload Existing Prescriptions" class="button1" style="width:182px;" />*@
 													<br />
 													<span style="color:green">@ViewBag.Message</span>
 												}
 											</div>
-										</div>
-									</div>
-									<div class="col-md-4">
-										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-										<div class="form-group">
-											<button type="button" class="button1" id="btnSubmit" style="margin-top:57px;" onclick="return CalculateBMI();">Calculate BMI</button>
 										</div>
 									</div>
 								</div>
@@ -203,7 +204,7 @@
 									<div class="col-md-4">
 										<div class="form-group">
 											<label for="BloodSugerLevel">Blood Sugar Level</label>
-											<input type="text" class="form-control" id="BloodSugarLevel" placeholder="BloodSugarLevel" />
+											<input type="number" class="form-control" id="BloodSugarLevel" placeholder="BloodSugarLevel" />
 											<select id="BloodSugarUnit" style="width:100%;" class="form-control">
 												<option value="mg/dL">mg/dL</option>
 												<option value="mmol/L">mmol/L</option>
@@ -221,8 +222,8 @@
 									<div class="col-md-4">
 										<div class="form-group">
 											<label for="BP">BP</label>
-											<input type="text" class="form-control" id="Systolic" placeholder="Systolic(mmHg)" /><br />
-											<input type="text" class="form-control" id="Diastolic" placeholder="Diastolic(mmHg)" />
+											<input type="number" class="form-control" id="Systolic" placeholder="Systolic(mmHg)" /><br />
+											<input type="number" class="form-control" id="Diastolic" placeholder="Diastolic(mmHg)" />
 										</div>
 										<div class="form-group">
 											<label for="UrineTest">Urine Test</label>
@@ -247,7 +248,7 @@
 										<input id="UrineTest" type="checkbox" />
 									</div>*@
 
-								<div class="row" style="margin-top:10px;">
+								<div class="row" style="margin-top:10px;" id="upload02">
 
 									<div class="col-md-5">
 
@@ -260,7 +261,7 @@
 													<br /><br />
 													<input type="file" name="postedFile" />
 													<br />
-													<input type="submit" value="Upload" class="button1" />
+													@*<input type="submit" value="Upload" class="button1" />*@
 													<br />
 													<span style="color:green">@ViewBag.Message</span>
 												}
@@ -268,7 +269,8 @@
 										</div>
 									</div>
 									<div class="col-md-3" style="padding: 10px; margin-top:68px;">
-										<button type="button" class="button1" id="btnAdd" onclick="return SaveMedicalAdvisory();">Add</button>
+										@*<button type="button" class="button1" id="btnAdd" onclick="return SaveMedicalAdvisory();">Add</button>*@
+										<input type="submit" value="Add" class="button1" onclick="return SaveMedicalAdvisory();" />
 									</div>
 								</div>
 
@@ -289,6 +291,12 @@
 	@Scripts.Render("~/bundles/jqueryval")
 	@Scripts.Render("~/bundles/jqueryui")
 	<script type="text/javascript">
+
+        $(document).ready(function () {
+            $("#btnAdd").prop("disabled", true); // deep
+            $("#upload01").hide(); // deep
+			$("#upload02").hide(); // deep
+        });
 		//alert('hi');
 
 
@@ -315,10 +323,14 @@
 
 
 
-		//$("#btnSubmit").click(function () {
-		//    alert("button");
-		//    CalculateBMI();
-		//});
+		$("#btnSubmit").click(function () {   //deep
+		    //alert("button");
+            //CalculateBMI();
+            $("#btnAdd").prop("disabled", false); // deep
+
+            $("#upload01").show(); // deep
+			$("#upload02").show(); // deep
+		});
 
 
 
