--- a/TM.RestHour/Views/CrewHealth/MedicalTreatment.cshtml
+++ b/TM.RestHour/Views/CrewHealth/MedicalTreatment.cshtml
@@ -55,10 +55,10 @@
                         <label for="Port of Destination">Port of Destination</label>
                         <input type="text" class="form-control" id="PortofDestination" placeholder="Port of Destination" />
                     </div>
-                    <div class="form-group">
+                    @*<div class="form-group">
                         <label for="Route">Route</label>
                         <input type="text" class="form-control" id="Route" placeholder="Route" />
-                    </div>
+                    </div>*@
 
 
                 </div>
