--- a/TM.RestHour/Views/Shared/_Layout.cshtml
+++ b/TM.RestHour/Views/Shared/_Layout.cshtml
@@ -123,14 +123,14 @@
                                 </li>
 
                                 @*<li class="dropdown">
-            <a tabindex="-1" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-                Medical Consultants <i class="fa fa-angle-right" style="margin-left:20px;"></i>
-            </a>
-            <ul class="dropdown-menu" role="menu" style="left: 252px;top: -3px;">
-                <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
-                <li><a href="@Url.Action("IndexNew", "Consultant")" style="border:none;">Health Management</a></li>
-            </ul>
-        </li>*@
+                        <a tabindex="-1" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+                            Medical Consultants <i class="fa fa-angle-right" style="margin-left:20px;"></i>
+                        </a>
+                        <ul class="dropdown-menu" role="menu" style="left: 252px;top: -3px;">
+                            <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
+                            <li><a href="@Url.Action("IndexNew", "Consultant")" style="border:none;">Health Management</a></li>
+                        </ul>
+                    </li>*@
 
                                 <li><a href="@Url.Action("Index", "Consultant")" style="border:none;">Medical Consultant</a></li>
 
@@ -146,16 +146,11 @@
                                     </ul>
                                 </li>
 
-                                
+
                                 @*<li><a href="@Url.Action("Index", "UploadMedicalInventory")" style="border:none;">Upload Medical Inventory</a></li>*@
 
                             </ul>
                         </li>
-
-
-
-
-
 
 
                         @*<li><a href="@Url.Action("Index", "Vessel")"><i class="fa fa-edit"></i><span> Vessel</span> </a></li>*@
@@ -189,7 +184,6 @@
 
                             </ul>
                         </li>
-
 
 
                         <li class="dropdown">
@@ -367,8 +361,6 @@
                         </li>
 
                     }
-
-
                     <!-- Optionally, you can add icons to the links -->
                     @if (Convert.ToBoolean(Session["User"].ToString()))
                     {
@@ -384,7 +376,7 @@
                                         Crew Health<i class="fa fa-angle-right" style="margin-left:20px;"></i>
                                     </a>
                                     <ul class="dropdown-menu" role="menu" style="left: 252px;top: -3px;">
-                                       
+
                                         <li><a href="@Url.Action("JoiningMedicalReport", "CrewHealth")" style="border:none;">Joining Medical Report</a></li>
                                         <li><a href="@Url.Action("MonthlyMedicalAdvisory", "CrewHealth")" style="border:none;">Monthly Medical Data</a></li>
                                         <li><a href="@Url.Action("MedicalHistory", "CrewHealth")" style="border:none;">Medical History</a></li>
@@ -466,7 +458,6 @@
                         @*<li><a href='@Url.Action("Index", "Regime")'><i class="fa fa-link"></i><span>Regime</span></a></li>*@
                     }
 
-
                     @if (Convert.ToBoolean(Session["SuperAdmin"].ToString()) || Convert.ToBoolean(Session["Admin"].ToString()))
                     {
                         <li class=""><a href="@Url.Action("Index", "TimeSheet")">Crew Time Sheet</a></li>
@@ -505,7 +496,8 @@
                     </li>
 
 
-
+                    <li class=""><a href='@Url.Action("Index", "About")'>xyzzz1</a></li>
+                    <li class=""><a href='@Url.Action("Index", "About")'>xyzzz2</a></li>
                     <li class=""><a href='@Url.Action("Index", "About")'>About</a></li>
                     <li class=""><a href='@Url.Action("index", "help")' style="border:none !important;">Help</a></li>
 
