CIRM task day 1

--- a/TM.RestHour/Views/CrewHealth/MedicalTreatment.cshtml
+++ b/TM.RestHour/Views/CrewHealth/MedicalTreatment.cshtml
@@ -103,7 +103,7 @@
                         <input type="text" class="form-control" id="Diastolic" placeholder="Diastolic(mmHg)" />
                     </div>
                     <div class="form-group">
-                        <label for="Desease Relevant Information">Desease Relevant Information</label>
+                        <label for="Desease Relevant Information">Disease Relevant Information</label>
                         <textarea class="form-control" id="RelevantInformationforDesease" cols="7" rows="2"></textarea>
                     </div>
                     @*<div>
@@ -126,10 +126,10 @@
                 </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="form-group">
+                    @*<div class="form-group">
                         <label for="Qualification">Qualification</label>
                         <input type="text" class="form-control" id="Qualification" placeholder="Qualification" />
-                    </div>
+                    </div>*@
                     <div class="form-group">
                         <label for="Temperature(F)">Temperature(F)</label>
                         <input type="text" class="form-control" id="Temperature" placeholder="Temperature(F)" />
