--- a/TM.RestHour/Views/Shared/_Layout.cshtml
+++ b/TM.RestHour/Views/Shared/_Layout.cshtml
@@ -497,7 +497,7 @@
 
 
                     <li class=""><a href='@Url.Action("Index", "About")'>xyzzz1</a></li>
-                    <li class=""><a href='@Url.Action("Index", "About")'>xyzzz2</a></li>
+                    <li class=""><a href='@Url.Action("Index", "About")'><b style="color:red;">xyzzz2</b></a></li>
                     <li class=""><a href='@Url.Action("Index", "About")'>About</a></li>
                     <li class=""><a href='@Url.Action("index", "help")' style="border:none !important;">Help</a></li>
 
