--- a/TM.RestHour/Views/CrewHealth/MedicalTreatment.cshtml
+++ b/TM.RestHour/Views/CrewHealth/MedicalTreatment.cshtml
@@ -129,10 +129,10 @@
                         <label for="Qualification">Qualification</label>
                         <input type="text" class="form-control" id="Qualification" placeholder="Qualification" />
                     </div>*@
-                    <div class="form-group">
+                    @*<div class="form-group">
                         <label for="Temperature(F)">Temperature(F)</label>
                         <input type="text" class="form-control" id="Temperature" placeholder="Temperature(F)" />
-                    </div>
+                    </div>*@
                     <div class="form-group">
                         <label for="Symptomatology">Symptomatology</label>
                         <textarea class="form-control" id="Symptomatology" cols="7" rows="2"></textarea>
